# LSFTP

./: .gitignore  Cargo.toml  Dockerfile  README.md  deny.toml  prompt.ini
.github/workflows/: ci.yml  deploy.yml
lsftp-client/: Cargo.toml
lsftp-client/src/: cli.rs  client.rs  lib.rs  main.rs
lsftp-core/: Cargo.toml
lsftp-core/src/: audit.rs  auth.rs  crypto.rs  error.rs  lib.rs  protocol.rs  transport.rs
lsftp-server/: Cargo.toml
lsftp-server/src/: main.rs
lsftp-tools/: Cargo.toml
lsftp-tools/src/: main.rs
scripts/: deploy.sh
