[workspace]
members = [
    "lsftp-core",
    "lsftp-client", 
    "lsftp-server",
    "lsftp-tools"
]

[workspace.dependencies]
# Networking
tokio = { version = "1.35", features = ["full"] }
quinn = "0.10"
rustls = "0.21"
rustls-pemfile = "1.0"

# Cryptography
ring = "0.17"
blake3 = "1.5"
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
sha3 = "0.10"

# Hardware Security (Linux only)
# yubikey = "0.7"
# tss-esapi = "7.4"
# pcsc = "2.8"

# Serialization & Parsing
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.0", features = ["alloc"] }
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"

# System Integration (Linux only)
# nix = "0.27"
# caps = "0.5"
# seccomp = "0.1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.21"
sentry = "0.31"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
zeroize = "1.7"
subtle = "2.5"
